@@ -1,4 +1,10 @@
-﻿shmuel 16.10.2015 19:08:56 +0200 - build 535
+﻿shmuel 25.10.2015 17:24:57 +0200 - build 536
+
+1. Продолжение 516:
+   a) пункты меню выбора макроса выводятся отсортированными;
+   б) заголовок консоли показывает заголовок данного меню;
+
+shmuel 16.10.2015 19:08:56 +0200 - build 535
 
 1. Откат билда 533 (перестал работать макро-API в FarNet и PowerShellFar).
 
